# DocFeed

./: GOAL.md  README.md
backend/: .env.example  main.py  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: docs.py
backend/app/services/: fetcher.py  processor.py
frontend/: .env  .env.example  .env.production  index.html  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/types/: index.ts
