[project]
name = "docfeed-backend"
version = "0.1.0"
description = "DocFeed — Feed your AI the freshest docs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
]

[tool.ruff]
line-length = 100